--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "noImplicitAny": true,
         "module": "es6",
         "target": "es5",
-        "sourceMap": true
+        "sourceMap": true,
+        "strict": true,
     },
 }
