--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack:test": "webpack && type input.txt | node ./dist/bundle.js",
+    "start": "webpack && type input.txt | node ./dist/bundle.js",
     "local:test": "type input.txt | node ./dist/index.js"
   },
   "author": "",
@@ -14,6 +14,7 @@
     "@types/node": "^13.11.1",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
+    "webpack": "^5.14.0",
     "webpack-cli": "^4.2.0"
   }
 }
