--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/node": "^13.11.1",
     "ts-loader": "^6.2.2",
+    "tslint": "^6.1.3",
     "typescript": "^3.8.3",
     "webpack": "^5.14.0",
     "webpack-cli": "^4.2.0"
